# moonshot

./: Cargo.toml
.cargo/: config.toml
moonshot-core/: Cargo.toml
moonshot-core/src/: gdt.rs  lib.rs  main.rs
moonshot-core/src/interrupts/: handlers.rs  index.rs  mod.rs
moonshot-core/tests/: os_boot.rs  stack_overflow.rs
moonshot-display/: Cargo.toml
moonshot-display/src/: lib.rs
moonshot-display/src/vga/: buffer.rs  color.rs  mod.rs
moonshot-shared/: Cargo.toml
moonshot-shared/src/: exit.rs  instruction.rs  lib.rs  serial.rs  testing.rs
src/: interrupts.rs  lib.rs  main.rs  testing.rs
src/display/: mod.rs
src/display/vga/: buffer.rs  character.rs  mod.rs  writer.rs
tests/: os_boot.rs  stack_overflow.rs  test_os_boot.rs
