[package]
name = "moonshot"
version = "0.1.0"
edition = "2021"

[features]
vga = []
default = ["vga"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.22"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.8.0"
volatile = "0.4.4"
